--- a/requirements.txt
+++ b/requirements.txt
@@ -74,7 +74,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
 pytz==2025.1
-pywin32==309
+#pywin32==309
 PyYAML==6.0.2
 pyzmq==26.2.1
 referencing==0.36.2
